--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,10 @@
     "object-curly-spacing": [
       2,
       "never"
+    ],
+    "quote-props": [
+      "error",
+      "as-needed"
     ]
   }
 }
