--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint ./src --ext .ts"
   },
   "devDependencies": {
+    "@orchy-mfe/models": "^0.0.1",
     "@testing-library/dom": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
