--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "vite": "^3.1.6",
     "vite-plugin-qiankun": "^1.0.15",
     "vitest": "^0.24.0"
+  },
+  "dependencies": {
+    "rxjs": "^7.5.7"
   }
 }
